<resources>
    <string name="app_name">Bluetooth Printer</string>

    <!-- menu title -->
    <string name="menu_devices">Dispositivos</string>
    <string name="menu_tickets">Conprovantes</string>
    <string name="menu_itens">Itens</string>
    <string name="menu_cupons">Cupons</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_add">Add</string>

    <!-- Headers -->
    <string name="header_add_cupom">Adicionar Cupom</string>
    <string name="header_home">Início</string>
    <string name="header_device">Dispositivos</string>
    <string name="header_itens">Item</string>
    <string name="header_tickets">Conprovantes</string>
    <string name="header_cupons">Cupons</string>

    <!-- Placeholders -->
    <string name="placeholder_date">00/00/0000</string>
    <string name="item_description">Descrição</string>
    <string name="item_quantity">Quantidade</string>
    <string name="item_value">Valor</string>
    <string name="item_type">Tipo</string>
    <string name="button_save">Salvar</string>


</resources>
