<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:title="@string/menu_home"
        android:icon="@drawable/icon_home"/>

    <item android:id="@+id/productsFragment"
        android:title="@string/menu_devices"
        android:icon="@drawable/icon_product" />

    <item android:id="@+id/cuponsFragment"
        android:title="@string/menu_itens"
        android:icon="@drawable/icon_list_cupom"/>

    <item android:id="@+id/ticketFragment"
        android:title="@string/menu_tickets"
        android:icon="@drawable/icon_ticket"/>

    <item android:id="@+id/addCupomFragment"
        android:title="@string/menu_cupons"
        android:icon="@drawable/icon_add_cupom"/>

</menu>